tests/compile_fail/max_timers_too_large.c
#define MTIMER_MAX_TIMERS 1024
#include "../../include/mtimer_config.h"

int main(void)
{
    return 0;
}
